feat: improve plotting example

--- a/main-arxiv.tex
+++ b/main-arxiv.tex
@@ -173,18 +173,19 @@ This is some abstract.}
 	
 	What results did we report
 
+	% Load plots for this section
+
+
 \subsubsection{Aspect 1}
 
 	Here is a picture of what happened
-		
-
 
 	\begin{figure}
 	\centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
 
-{\centering \includegraphics[width=\maxwidth]{figure/plot-distribution-1} 
+{\centering \includegraphics[width=\maxwidth]{figure/plot-pdf-1} 
 
 }
 
@@ -195,24 +196,7 @@ This is some abstract.}
 
 \subsubsection{Aspect 2}
 
-	This is what we find
-
-
-
-	\begin{figure}
-	\centering
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-
-{\centering \includegraphics[width=\maxwidth]{figure/plot-mice-1} 
-
-}
-
-
-\end{knitrout}
-		\caption{\label{fig:mice} md.patterns plot }
-	\end{figure}
-
+	This is something else we found.
     
 \section{Simulation study 2}
 
