--- a/main-journal.tex
+++ b/main-journal.tex
@@ -1,5 +1,5 @@
-% Project:  paper-mipcr-compare
-% Type:     draft version
+% Project:  paper-template
+% Type:     Journal version
 % Author:   Edoardo Costantini
 % Created:  2022-04-25
 % Modified: 2022-06-10
@@ -91,11 +91,12 @@
 \authornote{
   Corresponding author's contacts: \\
   e.costantini@tilburguniversity.edu; \\
-  +31 6 33 74 21 68
+  +31 **************
   }
 
 % Abstract
-\abstract{Some abstract}
+\abstract{
+This is some abstract.}
 
 % Main Document -------------------------------------------------------------- %
 
@@ -113,11 +114,11 @@
     
 \section{Introduction}
 
-    A strong and commanding introduction
+    A strong and commanding introduction.
 
 \subsection{The power of knowing}
 
-    Followed by a good description
+    Followed by a good description of previous studies \citep{collinsEtAl:2001}.
     
 \section{Imputation methods and algorithms}\label{sec:methods}
 
@@ -165,18 +166,19 @@
 	
 	What results did we report
 
+	% Load plots for this section
+
+
 \subsubsection{Aspect 1}
 
 	Here is a picture of what happened
-		
-
 
 	\begin{figure}
 	\centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
 
-{\centering \includegraphics[width=\maxwidth]{figure/plot-distribution-1} 
+{\centering \includegraphics[width=\maxwidth]{figure/plot-pdf-1} 
 
 }
 
@@ -187,58 +189,7 @@
 
 \subsubsection{Aspect 2}
 
-	This is what we find
-
-
-
-	\begin{figure}
-	\centering
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
-
-{\centering \includegraphics[width=\maxwidth]{figure/plot-mice-1} 
-
-}
-
-
-\end{knitrout}
-		\caption{\label{fig:mice} md.patterns plot }
-	\end{figure}
-
-    
-\section{Simulation study 2}
-
-	Why we did what we did.
-
-\subsection{Simulation study procedure}
-
-\subsubsection{Data generation}
-
-	How we generated data	
-
-\subsubsection{Missing data imposition}\label{sub-missing}
-
-	How we imposed missing data	
-
-\subsubsection{Imputation}
-
-	Imputation models specification
-
-\subsubsection{Analysis and comparison criteria}\label{criteria}
-
-	Outcome measures
-
-\subsection{Results}
-	
-	What results did we report
-
-\subsubsection{Aspect 1}
-
-	Here is a picture of what happened
-
-\subsubsection{Aspect 2}
-
-	This is what we find
+	This is something else we found.
     
 \section{Limitations and future directions}
 
