--- a/main-sup.Rnw
+++ b/main-sup.Rnw
@@ -1,16 +1,15 @@
 % Project:  paper-template
-% Type:     Journal version
+% Type:     supplementary material
 % Author:   Edoardo Costantini
-% Created:  2022-04-25
+% Created:  2021-12-17
 % Modified: 2022-06-10
-% Notes:    Inclusion of subfolders is as reccomended by 
-%           https://yihui.org/knitr/demo/child/
 
 % Preamble ------------------------------------------------------------------- %
 
 \documentclass[a4paper,man,floatsintext,natbib]{apa6}
+% \documentclass[a4paper,man,natbib]{apa6}
 
-% Latex packagaes
+% Packagaes
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
@@ -21,6 +20,7 @@
 \usepackage{framed} % for something Rnw related
 \usepackage{lineno}
 \usepackage{color}
+\usepackage{placeins} 		% for FloatBarrier
 
 % Macros
 \renewcommand{\linenumberfont}{\tiny\color{gray}} % make linenum small and gray
@@ -44,29 +44,18 @@
   +31 **************
   }
 
-% Abstract
-\abstract{\Sexpr{knit_child("sec-abstract.Rnw")}}
-
 % Main Document -------------------------------------------------------------- %
 
 \begin{document}
-	\maketitle
+
+    % Make title
+  	\maketitle
 
     % Start line numbering here
     \linenumbers
 
-    % Start section header numbering here
-    \setcounter{secnumdepth}{3} % up to depth 3
-
-    % Paper content
-    \Sexpr{knit_child("sec-introduction.Rnw")}
-    \Sexpr{knit_child("sec-methods.Rnw")}
-    \Sexpr{knit_child("sec-study-1.Rnw")}
-    \Sexpr{knit_child("sec-limits.Rnw")}
-    \Sexpr{knit_child("sec-discussion.Rnw")}
-    
-    % Stop section header numbering here
-    \setcounter{secnumdepth}{4}
+    % Content
+    \Sexpr{knit_child("sec-study-2.Rnw")}
 
     % References
     \Sexpr{knit_child("sec-biblio.Rnw")}
