content: some changes to the intro

--- a/main-journal.tex
+++ b/main-journal.tex
@@ -114,7 +114,7 @@ This is some abstract.}
     
 \section{Introduction}
 
-    A strong and commanding introduction.
+    A captivating introduction is all you need.
 
 \subsection{The power of knowing}
 
