--- a/sec-introduction.Rnw
+++ b/sec-introduction.Rnw
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-    A strong and commanding introduction.
+    A captivating introduction is all you need.
 
 \subsection{The power of knowing}
 
