--- a/main-arxiv.tex
+++ b/main-arxiv.tex
@@ -2,7 +2,7 @@
 % Type:     pre-print version
 % Author:   Edoardo Costantini
 % Created:  2022-08-29
-% Modified: 2022-08-29
+% Modified: 2022-10-27
 
 % Preamble ------------------------------------------------------------------- %
 
@@ -90,7 +90,6 @@
 \newcommand{\pathFIG}{./figures}
 
 % Article information
-% Article information
 \title{Paper title}
 \shorttitle{Short title}
 \twoauthors
@@ -122,7 +121,7 @@ This is some abstract.}
     
 \section{Introduction}
 
-    A strong and commanding introduction.
+    A captivating introduction is all you need.
 
 \subsection{The power of knowing}
 
@@ -218,7 +217,7 @@ This is some abstract.}
 
     \section{Availability of data and materials}
 
-    The EVS data that support the findings of this study are openly available in GESIS Data Archive at https://doi.org/10.4232/1.13511, reference number ZA7500.
+    The data that support the findings of this study are available at [\url{https://some-url}].
     
     \section{Code availability}
 
