--- a/main-sup.Rnw
+++ b/main-sup.Rnw
@@ -2,27 +2,32 @@
 % Type:     supplementary material
 % Author:   Edoardo Costantini
 % Created:  2021-12-17
-% Modified: 2022-10-27
+% Modified: 2022-11-03
 
 % Preamble ------------------------------------------------------------------- %
 
-\documentclass[a4paper,man,floatsintext,natbib]{apa6}
+% \documentclass[a4paper,man,floatsintext]{apa6} % floats in text
+\documentclass[a4paper,man]{apa6} % floats after text
 
-% Packagaes
+% Packages from APA template
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
-\usepackage{hyperref}
-\usepackage{alltt}  % for something Rnw related
-\usepackage{framed} % for something Rnw related
-\usepackage{lineno}
-\usepackage{color}
-\usepackage{placeins} 		% for FloatBarrier
+
+% Other packages I need
+\usepackage{hyperref}  % for clickable links
+\usepackage{natbib}    % for citations
+  \bibliographystyle{./style/asj} % to define citaiton style
+\usepackage{lineno}    % for line numbering
+\usepackage{color}     % for changing colors
+\usepackage{adjustbox} % to make tables fit pages
+\usepackage{placeins}  % for FloatBarrier
 
 % Macros
-\renewcommand{\linenumberfont}{\tiny\color{gray}} % make linenum small and gray
+\renewcommand{\linenumberfont}{\tiny\color{gray}} % make line number small and gray
+\newcommand{\norm}[1]{\left\lVert#1\right\rVert} % for l2 norm in equations
 
 % Paths (self-contained)
 \newcommand{\pathBIB}{./bib}
@@ -57,6 +62,6 @@
     \Sexpr{knit_child("sec-study-2.Rnw")}
 
     % References
-    \Sexpr{knit_child("sec-biblio.Rnw")}
+    \bibliography{\pathBIB/bibshelf}
 
 \end{document}
