--- a/main-sup.tex
+++ b/main-sup.tex
@@ -2,11 +2,12 @@
 % Type:     supplementary material
 % Author:   Edoardo Costantini
 % Created:  2021-12-17
-% Modified: 2022-06-10
+% Modified: 2022-11-03
 
 % Preamble ------------------------------------------------------------------- %
 
-\documentclass[a4paper,man,floatsintext,natbib]{apa6}\usepackage[]{graphicx}\usepackage[]{xcolor}
+% \documentclass[a4paper,man,floatsintext]{apa6} % floats in text
+\documentclass[a4paper,man]{apa6}\usepackage[]{graphicx}\usepackage[]{xcolor}
 % maxwidth is the original width if it is less than linewidth
 % otherwise use linewidth (to make sure the graphics do not exceed the margin)
 \makeatletter
@@ -56,24 +57,27 @@
 \definecolor{errorcolor}{rgb}{1, 0, 0}
 \newenvironment{knitrout}{}{} % an empty environment to be redefined in TeX
 
-\usepackage{alltt}
-% \documentclass[a4paper,man,natbib]{apa6}
+\usepackage{alltt} % floats after text
 
-% Packagaes
+% Packages from APA template
 \usepackage[english]{babel}
 \usepackage[utf8x]{inputenc}
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage[colorinlistoftodos]{todonotes}
-\usepackage{hyperref}
-\usepackage{alltt}  % for something Rnw related
-\usepackage{framed} % for something Rnw related
-\usepackage{lineno}
-\usepackage{color}
-\usepackage{placeins} 		% for FloatBarrier
+
+% Other packages I need
+\usepackage{hyperref}  % for clickable links
+\usepackage{natbib}    % for citations
+  \bibliographystyle{./style/asj} % to define citaiton style
+\usepackage{lineno}    % for line numbering
+\usepackage{color}     % for changing colors
+\usepackage{adjustbox} % to make tables fit pages
+\usepackage{placeins}  % for FloatBarrier
 
 % Macros
-\renewcommand{\linenumberfont}{\tiny\color{gray}} % make linenum small and gray
+\renewcommand{\linenumberfont}{\tiny\color{gray}} % make line number small and gray
+\newcommand{\norm}[1]{\left\lVert#1\right\rVert} % for l2 norm in equations
 
 % Paths (self-contained)
 \newcommand{\pathBIB}{./bib}
@@ -142,11 +146,6 @@
 	This is what we find
 
     % References
-    
-\bibliographystyle{./style/asj}
-
-\bibliography{
-	\pathBIB/bibshelf
-}
+    \bibliography{\pathBIB/bibshelf}
 
 \end{document}
